# inkscape

./: .gitignore  .gitlab-ci.yml  .gitmodules  02-autosave-script.sh  CMakeLists.txt  NEWS.md  README-wachi.md  README.md  README.md.backup  config.h.cmake  org.inkscape.Inkscape.appdata.xml.in
CMakeScripts/: ConfigCPack.cmake  ConfigEnvMinGW.cmake  DefineDependsandFlags.cmake  HelperFunctions.cmake  InstallMSYS2.cmake  Pod2man.cmake  inkscape-version.cmake
buildtools/: Doxyfile  check_license_headers.py  media-check-icons.py  media-check-keys.py  msys2build_GitLab.sh  msys2installdeps.sh
debian/: changelog  control  git-build-recipe.manifest  rules
man/: inkscape.de.pod.in  inkscape.fr.pod.in  inkscape.hr.pod.in  inkscape.hu.pod.in  inkscape.ko.pod.in  inkscape.pod.in  inkscape.zh_TW.pod.in  inkview.de.pod.in  inkview.es.pod.in  inkview.fr.pod.in  inkview.hr.pod.in  inkview.hu.pod.in  inkview.ko.pod.in  inkview.pod.in  inkview.pt_BR.pod.in  inkview.zh_TW.pod.in
packaging/appimage/: AppRun  generate.sh
packaging/macos/: README.md  build.sh
po/: CMakeLists.txt  POTFILES.inx.in  POTFILES.py.in  POTFILES.skip  POTFILES.src.in  POTFILES.ui.in  ar.po  as.po  az.po  be.po  bg.po  bn.po  bn_BD.po  br.po  brx.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  doi.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  generate_POTFILES.sh  gl.po  gu.po  he.po  hi.po  (+55 more)
po/its/: inx.its
share/: CMakeLists.txt
share/examples/: CMakeLists.txt
share/extensions/: .gitignore  .gitlab-ci.sphinx-conf.py  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  README.md  addnodes.py  convert2dashes.py  dxf12_outlines.py  dxf_input.py  dxf_outlines.py  export_gimp_palette.py  gcodetools.py  hershey.py  inkscape.extension.rng  inkscape_help_faq.inx  inkscape_help_manual.inx  inset_shadow.py  measure.py  path_number_nodes.py  pathmodifier.py  pyproject.toml  scribus_export_pdf.py  synfig_output.py  ungroup_deep.py
share/filters/: CMakeLists.txt  filters.svg.h
share/markers/: CMakeLists.txt  i18n.py
share/paint/: CMakeLists.txt  i18n.py
share/palettes/: CMakeLists.txt
share/symbols/: CMakeLists.txt
share/templates/: CMakeLists.txt  templates.h
share/tutorials/: CMakeLists.txt
share/ui/: Adwaita-dark.css  Adwaita.css  CMakeLists.txt  align-and-distribute.ui  dialog-objects.glade  inkscape-start.glade  mac.css  menus.ui  style.css  toolbar-page.ui  toolbar-snap.ui
snap/: snapcraft.yaml
snap/local/: filedialog-native.patch  glib-spawn-no-close.patch
src/: CMakeLists.txt  alignment-snapper.cpp  attribute-rel-css.cpp  attribute-rel-css.h  attribute-rel-svg.cpp  attribute-rel-svg.h  attribute-rel-util.cpp  attribute-rel-util.h  attributes.cpp  attributes.h  auto-save.cpp  color.cpp  color.h  composite-undo-stack-observer.cpp  composite-undo-stack-observer.h  conn-avoid-ref.cpp  conn-avoid-ref.h  desktop-events.cpp  desktop-style.cpp  desktop-style.h  desktop.cpp  desktop.h  device-manager.cpp  device-manager.h  distribution-snapper.cpp  document-subset.cpp  document-subset.h  document-undo.cpp  document.cpp  document.h  event-log.cpp  extract-uri.cpp  extract-uri.h  file-update.cpp  file.cpp  file.h  filter-chemistry.cpp  filter-chemistry.h  filter-enums.cpp  gradient-chemistry.cpp  (+82 more)
src/actions/: actions-base.cpp  actions-canvas-mode.cpp  actions-canvas-snapping.cpp  actions-canvas-transform.cpp  actions-dialogs.cpp  actions-dialogs.h  actions-edit-document.cpp  actions-edit-window.cpp  actions-edit.cpp  actions-edit.h  actions-effect.cpp  actions-effect.h  actions-element-a.cpp  actions-element-image.cpp  actions-extra-data.cpp  actions-extra-data.h  actions-file-window.cpp  actions-file.cpp  actions-help-url.cpp  actions-helper.cpp  actions-helper.h  actions-hide-lock.cpp  actions-layer.cpp  actions-node-align.cpp  actions-object-align.cpp  actions-object.cpp  actions-output.cpp  actions-pages.cpp  actions-pages.h  actions-paths.cpp  actions-selection-object.cpp  actions-selection-window.cpp  actions-selection.cpp  actions-text.cpp  actions-tools.cpp  actions-tools.h  actions-transform.cpp  actions-undo-document.cpp  actions-undo-document.h  actions-view-mode.cpp  (+2 more)
src/async/: CMakeLists.txt  async.cpp  async.h  background-progress.h  channel.h  progress-splitter.h  progress.h
src/color/: CMakeLists.txt  color-conv.cpp  color-conv.h
src/debug/: CMakeLists.txt  event-tracker.h  heap.cpp  logger.h
src/display/: CMakeLists.txt  cairo-templates.h  cairo-utils.cpp  cairo-utils.h  curve.cpp  curve.h  drawing-context.cpp  drawing-context.h  drawing-group.cpp  drawing-group.h  drawing-image.cpp  drawing-image.h  drawing-item-ptr.h  drawing-item.cpp  drawing-item.h  drawing-paintserver.cpp  drawing-paintserver.h  drawing-pattern.cpp  drawing-pattern.h  drawing-shape.cpp  drawing-shape.h  drawing-surface.cpp  drawing-surface.h  drawing-text.cpp  drawing-text.h  drawing.cpp  drawing.h  initlock.h  nr-filter-blend.cpp  nr-filter-blend.h  nr-filter-colormatrix.cpp  nr-filter-colormatrix.h  nr-filter-component-transfer.cpp  nr-filter-component-transfer.h  nr-filter-composite.cpp  nr-filter-composite.h  nr-filter-convolve-matrix.cpp  nr-filter-convolve-matrix.h  nr-filter-diffuselighting.cpp  nr-filter-diffuselighting.h  (+37 more)
src/extension/: CMakeLists.txt  db.cpp  db.h  effect.cpp  effect.h  execution-env.cpp  execution-env.h  extension.cpp  extension.h  init.cpp  init.h  input.cpp  input.h  (+5 more)
src/util/: CMakeLists.txt  action-accel.cpp  action-accel.h  cached_map.h  cast.h  document-fonts.cpp  document-fonts.h  font-collections.cpp  font-collections.h  format_size.cpp  format_size.h  funclog.cpp  funclog.h  object-renderer.cpp  object-renderer.h  optstr.h  paper.cpp  paper.h  parse-int-range.h  pool.cpp  pool.h  preview.cpp  preview.h  recently-used-fonts.cpp  recently-used-fonts.h  scope_exit.h  statics.cpp  statics.h  trim.h  units.cpp  units.h  xim_fix.cpp  xim_fix.h
src/util/numeric/: converters.h
testfiles/: CMakeLists.txt  lpespaths-test.h  unittest.cpp
testfiles/rendering_tests/: CMakeLists.txt  test.sh
(+1666 files in other folders)
